--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@popperjs/core": "^2.11.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0",
     "moment": "^2.29.1",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "sweetalert2": "^11.3.6"
   }
 }
