--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "submissionfundamentalfrontend",
   "version": "1.0.0",
+  "homepage": "https://https://erastusms.github.io/movie-web",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "webpack --config webpack.prod.js",
     "start-dev": "webpack serve --config webpack.dev.js"
   },
@@ -14,6 +17,7 @@
     "@babel/preset-env": "^7.16.8",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
